Fixed bug #33523 (Memory leak in xmlrpc_encode_request()).